--- a/development/task1/src/requirements.txt
+++ b/development/task1/src/requirements.txt
@@ -23,3 +23,7 @@ torch==2.4.1
 typing-extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+optuna==3.6.1
+plotly==5.22.0
+joblib==1.4.2
+scikit-learn==1.3.2
