--- a/development/task1/configs/profit_focused_config.json
+++ b/development/task1/configs/profit_focused_config.json
@@ -9,7 +9,11 @@
     "trade_completion_bonus": 0.02,
     "opportunity_cost_penalty": 0.001,
     "blend_factor": 0.7,
-    "regime_sensitivity": true
+    "regime_sensitivity": true,
+    "profit_speed_enabled": true,
+    "max_speed_multiplier": 5.0,
+    "speed_decay_rate": 0.02,
+    "min_holding_time": 5
   },
   
   "feature_config": {
